# WIBL

./: .gitattributes  .gitignore  README.md  convertToWibl.ps1
wibl-python/: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-build.txt  requirements-lambda.txt  requirements-vizlambda.txt  requirements.txt  setup.cfg
wibl-python/awsbuild/: package-setup.sh
wibl-python/examples/: configure-submission-test.json  configure-submission.json  ship-metadata-complete.json  ship-metadata-simple.json
wibl-python/scripts/: AWSCloudSetup.md  convert-md-openvbi.py  vizlambdainvoke.py
wibl-python/scripts/cloud/AWS/: README.md  build-frontend.sh  build-lambda.sh  build-manager.sh  configuration-parameters.sh  configure-buckets.sh  configure-ec2-test-instance.sh  configure-lambdas.sh  configure-manager-ecs-vpc-endpoints.sh  configure-manager-ecs.sh  configure-sns.sh  configure-vizlambda.sh  update-frontend-ecs.sh  update-lambda-code.sh  update-manager-ecs.sh
wibl-python/scripts/cloud/Terraform/: build.sh  buildLocal.sh  destroy.sh  destroyLocal.sh  main.tf  plan.sh  terraform.tfvars  variables.tf
wibl-python/scripts/data-management/: README.md  convertToWibl.ps1  countGeojsons.py  debugWibl.ps1  processWibl.ps1  submitDCDB.ps1  validateWibl.ps1
wibl-python/src/wibl/: __init__.py
wibl-python/src/wibl/command/: __init__.py  __main__.py  datasim.py  dcdb_upload.py  edit_wibl_file.py  parse_wibl_file.py  support.py  upload_wibl_file.py  validate.py  wibl_proc.py
wibl-python/src/wibl/core/: config.py  datasource.py  fileloader.py  logger_file.py  timestamping.py
wibl-python/src/wibl/visualization/: soundings.py
wibl-python/tests/: fixtures.py
wibl-python/tests/aws/: fixtures.py  test_soundings.py
wibl-python/tests/aws/unit/: test_geojson_viz.py
wibl-python/tests/data/: b12_v3_metadata_example.json  configure.local.json
wibl-python/tests/integration/: docker-compose.yaml  test_wibl.bash
wibl-python/tests/unit/: test_lambdas.py
wibl-python/wibl/: __init__.py
wibl-python/wibl-frontend/: .gitignore  Dockerfile  Dockerfile.dev  MANIFEST.in  README.md  cloudFilesTest.sh  docker-compose.dev  docker-compose.yaml  initial-startup.sh  pyproject.toml  requirements.txt
wibl-python/wibl-frontend-proto/: createFiles.sh  frontend.env  frontend_test.env  requirements.txt
wibl-python/wibl-frontend-proto/wibl_frontend/: __init__.py  auth.py  main.py  models.py  query_main.py
wibl-python/wibl-frontend/flask_auth_app/: Dockerfile  containers.json  docker-compose.yaml  frontend.env  requirements.txt
wibl-python/wibl-frontend/src/: manage.py
wibl-python/wibl-frontend/wibl_frontend/: app_globals.py  application.py  auth.py  backend_model.py  cloud.py  main.py  query_data.py  query_main.py
wibl-python/wibl-manager/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.dev  docker-compose.yaml  entrypoint-dev.bash  entrypoint.sh  load-test-data.bash  manager.env  manager_test.env  pyproject.toml  requirements.txt  s3-test-load.bash  s3-test-load.sh
wibl-python/wibl-manager/scripts/: alembic-downgrade.sh  alembic-migrate.sh  generate-env.sh  generate-revision.sh  load-test-data.bash  s3-test-load.sh
wibl-python/wibl-manager/wibl_alembic/: env.py
wibl-python/wibl-manager/wibl_manager/: __init__.py  app_globals.py  application.py  create_database.py  dashboard_data.py  download.py  geojson_data.py  geojson_download.py  geojson_save.py  wibl_data.py  wibl_download.py
wibl-python/wibl/core/: __init__.py  datasource.py  geojson_convert.py  logger_file.py  notification.py
wibl-python/wibl/visualization/: soundings.py
(+358 files in other folders)
