[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "wibl-python"
authors = [
    { name="Brian Calder", email="brc@ccom.unh.edu" },
    { name="Brian Miles", email="bmiles@ccom.unh.edu" }
]
description = "Python code WIBL low-cost data logger system"
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3~=1.20",
    "requests~=2.32.4",
    "numpy>=1.23.5; python_version<'3.12'",
    "numpy>=1.26.0; python_version>='3.12'",
    "pynmea2~=1.18",
    "csbschema~=1.1.2",
    "pygmt~=0.10.0",
    "rasterio~=1.3.0",
    "geopandas",
    "deepmerge",
    "click~=8.2.1"
]

[project.optional-dependencies]
test = [
    "pylint~=3.0.0",
    "unittest-xml-reporting~=3.2.0",
    "lxml~=5.0.0",
    "pytest~=7.4.0",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
"Homepage" = "https://github.com/CCOMJHC/WIBL"
"Bug Tracker" = "https://github.com/CCOMJHC/WIBL/issues"

[project.scripts]
wibl = "wibl.command:cli"

[tool.setuptools.dynamic]
version = {attr = "wibl.__version__"}
