[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "wibl_frontend"
authors = [
  { name="Brian Calder", email="brc@ccom.unh.edu" },
  { name="Brian Miles", email="bmiles@ccom.unh.edu" },
]
description = "Tool for managing cloud-based WIBL data file processing from outside the cloud"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    'gunicorn~=20.1.0',
    'Flask~=3.0.2',
    'Flask-SQLAlchemy~=3.1.1',
    'Flask-RESTful~=0.3.9',
    'dataclasses-json~=0.5.7',
    'Flask-Login~=0.6.3',
    'Flask-SQLAlchemy~=3.1.1',
    'requests~=2.28.2',
    'boto3~=1.34.0'
]

[project.optional-dependencies]
test = [
]

[project.urls]
"Homepage" = "https://bitbucket.org/ccomjhc/wibl/"
"Bug Tracker" = "https://bitbucket.org/ccomjhc/wibl/"

[project.scripts]
wibl-manager = "wibl_frontend.application:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
version = {attr = "wibl_frontend.__version__"}
