[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "wibl_manager"
authors = [
  { name="Brian Calder", email="brc@ccom.unh.edu" },
  { name="Brian Miles", email="bmiles@ccom.unh.edu" },
]
description = "Flask-based RESTful interface to a metadata database for WIBL data file processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests~=2.32.4',
    'dataclasses-json~=0.5.7',
    'GeoAlchemy2'
]

[project.optional-dependencies]
server = [
    'uvicorn',
    'SQLAlchemy',
    'fastapi',
    'boto3~=1.34.0',
    'psycopg[binary]~=3.2.3',
    'alembic'
]
test = [
]

[project.urls]
"Homepage" = "https://bitbucket.org/ccomjhc/wibl/"
"Bug Tracker" = "https://bitbucket.org/ccomjhc/wibl/"

[tool.setuptools.dynamic]
version = {attr = "wibl_manager.__version__"}
